Despliegue en Heroku

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TIMES=2
-MONGODB_URI = 'mongodb+srv://<user>:<pass>@cluster0.vodgj.mongodb.net/<database>?retryWrites=true&w=majority'
+MONGODB_URI = 'mongodb+srv://canal:canal@cluster0.vodgj.mongodb.net/appsNube?retryWrites=true&w=majority'
 
