--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = 'mongodb+srv://canal:canal@cluster0.vodgj.mongodb.net/appsNube?retryWrites=true&w=majority'
+MONGODB_URI = 'mongodb+srv://canal:canal@cluster0.vodgj.mongodb.net/appsNube?retryWrites=true&w=majority&ssl_cert_reqs=CERT_NONE'
 
