--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
   {
 	"version": 2,
 	"public": false,
-	"builds": [{ "src": "app.py", "use": "@vercel/python" }],
+	"builds": [{ "src": "main.py", "use": "@vercel/python" }],
 	"routes": [
-		{ "src": "^(.*)$", "dest": "app.py" }
+		{ "src": "^(.*)$", "dest": "main.py" }
 	]
 }   
